$Id: History,v 1.13 2001-10-26 12:51:20 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm1 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
26-10-01 mma (testem1-V03-02-00)
- mods in TestEm1.cc: the initialisation and vis initialisation are
  not done gy default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac  (new vis commands)
- 80 columns everywhere  
     
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

27-03-01 mma (testem1-V03-00-05)
- set cppflag G4NOHIST = true in gnumakefile
	  	       
08-03-01 Hisaya (testem1-V03-00-04)
- adapted ProcessesCount to STL
	       
21-02-01 mma (testem1-V03-00-03)
- hbook histograms restored
	       
20-02-01 mma (testem1-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event     
     
07-12-00 mma (testem1-V02-00-03 & testem-noHist)
- remove hbook histograms: GNUmakefile,runAction,trackingAction,steppingAction
				   
06-12-00 mma (testem1-V02-00-02 & testem-withHist)
- update of init.mac for new vis commands.
- G4UItcsh in the main()
	  				        
24-11-00 Steve O'Neale (tagset210) (testem1-V02-00-01)
- Update test output Change in processes below ~ 5 per cent
  eIoni and hIoni  min.delta energy(keV) and energy cut table

13-11-00 G.Cosmo  (testem1-V02-00-00)
- Fixed memory leak in Em1RunAction: added call to clearAndDestroy()