@@ -1,4 +1,4 @@
-# $Id: run03.mac,v 1.2 2001-10-26 12:51:21 maire Exp $
+# $Id: run03.mac,v 1.3 2001-10-31 15:36:44 maire Exp $
 #
 # Macro file for "TestEm1.cc"
 # (can be run in batch, without graphic)
@@ -7,15 +7,16 @@
 #
 /control/verbose 2
 #
-/run/initialize
-#
-/process/eLoss/StepFunction 0.183 170 micrometer
 /calor/cutG  95 cm
 /calor/cutE  95 cm
+#
+/run/initialize
 #
 /process/inactivate phot
 /process/inactivate compt
 /process/inactivate conv
+#
+/process/eLoss/StepFunction 0.183 170 micrometer
 /process/eLoss/fluct 0
 #
 /run/verbose 2
