@@ -1,4 +1,4 @@
-# $Id: run08.mac,v 1.2 2001-10-26 12:51:22 maire Exp $
+# $Id: run08.mac,v 1.3 2001-10-31 15:36:44 maire Exp $
 #
 # Macro file for "TestEm1.cc"
 # (can be run in batch, without graphic)
@@ -7,11 +7,12 @@
 #
 /control/verbose 2
 #
-/run/initialize
+/calor/cutG 2.2 mm
+/calor/cutE 6.05 micrometer
+#
+/run/initialize    
 #
 /process/eLoss/StepFunction 0.183 170 micrometer
-/calor/cutG 2.2 mm
-/calor/cutE 6.05 micrometer     
 #
 /run/verbose 2
 #
