@@ -1,4 +1,4 @@
-# $Id: run11.mac,v 1.2 2001-10-26 12:51:22 maire Exp $
+# $Id: run11.mac,v 1.3 2001-10-31 15:36:44 maire Exp $
 #
 # Macro file for "TestEm1.cc"
 # (can be run in batch, without graphic)
@@ -7,10 +7,10 @@
 #
 /control/verbose 2
 #
-/run/initialize
-#
 /calor/cutG  95 cm
 /calor/cutE  17 cm
+#
+/run/initialize
 #
 /run/verbose 2
 #
